sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:18: error: missing arguments for method | in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (na==0 | na=getNombreValeurs-2) {
              ^