sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var x=0
  x=getNombreValeurs
  var debut=0
  var fin=x-2
  var ok:Boolean=false
  var na=0
  do  {
    ok=false
    for (i <- debut to fin) {
      if (plusPetit(i+1,i)) {
        echange(i+1,i)
        ok=true
        na+=1
      }
    }
    if (na==0 | na=getNombreValeurs-2) {
      return
    } else {
    fin-=1
    for (i <- fin to debut by -1) {
      if (plusPetit(i+1,i)) {
        echange(i+1,i)
        ok=true
      }
    } }
    debut+=1
    } while (ok)
}